build: preview기능 활성화